<resources>

    <string name="app_name">Gymapp</string>
    <string name="title_activity_main">Gym-appen</string>
    <string name="title_workouts">Workouts</string>
    <string name="title_statistics">Statistics</string>
    <string name="title_history">History</string>
    <string name="menu_addExe">Add Exercise!</string>
    <string name="exercise_name">Exercise name</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="done">Done</string>
    <string name="button_save">Save</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="length">Length</string>
    <string name="weight">Weight</string>
    <string name="buttonUppdate">Uppdate Profile</string>
    <string name="trainingtype_prompt">Choose type of training</string>
    <string name="primary_muscletype_prompt">Primary muscle</string>
    <string name="secondary_muscletype_prompt">Secondary muscle</string>
    <string name="sport_prompt">Select sport</string>
    <string name="string_type_of_training">Select type of training</string>
    <string name="description">Description</string>
    <string name="comment">Note to self</string>
    <string name="hint_description">Describe your exercise</string>
    <string name="hint_comment">Add a personal comment</string>
    <string name="title_activity_profile">Profile</string>
    <string name="menu_addWorkout">Add workout</string>
    <string name="title_activity_workout">WorkoutActivity</string>
    <string name="menu_editWorkout">Edit workout!</string>
    <string name="title_activity_register_dynamic">RegisterDynamicActivity</string>
    <string name="title_activity_register_static">RegisterStaticActivity</string>
    <string name="title_activity_register_cardio">RegisterCardioActivity</string>
    <string name="register_last_time">Last time: </string>
    <string name="register_current_sets">Sets: </string>
    <string name="register_my_notes">Notes: </string>
    <string name="register_minutes">Min.</string>
    <string name="register_seconds">Sec.</string>
    <string name="register_distance">Distance</string>
    <string name="register_finish_set">Add set</string>
    <string name="register_undo_set">Remove set</string>
    <string name="register_reps">Reps</string>
    <string name="register_weight">Weight</string>
    <string name="textview_musclegroup">Muscle group</string>
    <string name="textview_muscle">Muscle</string>
    <string name="title_activity_database">DatabaseActivity</string>
    <string name="title_activity_sqlview">SQLView</string>
    <string name="title_activity_show_single_history">ShowSingleHistoryActivity</string>
    <string name="title_activity_list_exercise">Exercises</string>
    <string name="dialog_new_workout_title">Enter name of Workout:</string>
    <string name="title_activity_settings">Settings</string>
    <string name="about">About</string>
    <string name="about_descr">This application is developed as an assignment during the course Software 
        	engineering project at the Chalmers University of Technology.</string>
	<string name="ok">OK</string>
	<string name="language">Language</string>
	<string name="language_select">Select desired language</string>
	<string name="distance">Distance</string>
	<string name="distance_select">Select desired distance unit</string>
	<string name="weight_select">Select desired weight unit</string>
	<string name="unit">Units</string>
	<string name="register_last_time">Last time: </string>
	<string name="register_current_sets">Sets: </string>
	<string name="register_my_notes">Notes: </string>
	<string name="register_minutes">Min.</string>
	<string name="register_seconds">Sec.</string>
	<string name="register_distance">Distance</string>
	<string name="register_undo_set">Remove set</string>
	<string name="register_reps">Reps</string>
	<string name="register_weight">Weight</string>
	<string name="textview_musclegroup">Muscle group</string>
	<string name="textview_muscle">Muscle</string>

    <string name="ok">OK</string>
    <string name="language">Language</string>
    <string name="language_select">Select desired language</string>
    <string name="distance">Distance</string>
    <string name="distance_select">Select desired distance unit</string>
    <string name="weight">Weight</string>
    <string name="weight_select">Select desired weight unit</string>
    <string name="unit">Units</string>
    <string name="register_last_time">Last time: </string>
    <string name="register_current_sets">Sets: </string>
    <string name="register_my_notes">Notes: </string>
    <string name="register_minutes">Min.</string>
    <string name="register_seconds">Sec.</string>
    <string name="register_distance">Distance</string>
    <string name="register_finish_set">Add set</string>
    <string name="register_undo_set">Remove set</string>
    <string name="register_reps">Reps</string>
    <string name="register_weight">Weight</string>
    <string name="textview_musclegroup">Muscle group</string>
    <string name="textview_muscle">Muscle</string>
    <string name="imagebutton_workout">WorkoutButton</string>
    <string name="imagebutton_exercises">ExercisesButton</string>
    <string name="imagebutton_history">HistoryButton</string>
    <string name="imagebutton_statistics">StatisticsButton</string>
    <string name="imagebutton_profile">ProfileButton</string>
    <string name="imagebutton_settings">SettingsButton</string>
    <string name="not_implemented">Not implemented</string>
    <string name="start">Start</string>
    <string name="enter_correct_name">Please enter a name</string>
    <string name="new_exercise">New exercise</string>
    <string name="invalid_value">Invalid value!</string>
    <string name="no_sets_to_delete">No sets to delete.</string>
    <string name="cant_add_set_without_time">Cant add set with no time.</string>
    <string name="cant_add_set_without_reps">Cant add set with 0 repetitions.</string>
    <string name="delete">Delete</string>
    <string name="delete_workout">Do your really want to delete this workout?</string>
    <string name="delete_exercise">Do your really want to delete this exercise?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="done_training">Are you really done training?</string>
    <string name="done_editing">Are you really done editing?</string>
    <string name="quit">Quit</string>
    <string name="really_quit">Do you really want to quit Gym-app?</string>
    <string name="leaving">Leaving</string>

    <string-array name="trainingtype_array">
        <item>Cardio</item>
        <item>Static</item>
        <item>Dynamic</item>
    </string-array>
    <string-array name="muscle_type">
        <item>Biceps</item>
        <item>Triceps</item>
        <item>Deltoid</item>
        <item>Lats</item>
    </string-array>
    <string-array name="sport_type">
        <item>Cycling</item>
        <item>Running</item>
        <item>Rowing</item>
    </string-array>

</resources>