<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    
    <TextView
        android:id="@+id/textView_type_of_training"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_type_of_training"
        tools:context=".AddExercise" />

    <Spinner
        android:id="@+id/spinner_type_of_training"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView_type_of_training"
        android:prompt="@string/trainingtype_prompt" />

    <Spinner
        android:id="@+id/spinner_primary_muscle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spinner_type_of_training"
        android:entries="@array/muscle_type"
        android:prompt="@string/primary_muscletype_prompt" />

    <Spinner
        android:id="@+id/spinner_secondary_muscle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spinner_primary_muscle"
        android:entries="@array/muscle_type"
        android:prompt="@string/secondary_muscletype_prompt" />

    <TextView
        android:id="@+id/selection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</RelativeLayout>