<!--
/* Copyright © 2012 GivDev
*
*This file is part of Gymapp.
*
*   Gymapp is free software: you can redistribute it and/or modify
*   it under the terms of the GNU General Public License as published by
*   the Free Software Foundation, either version 3 of the License, or
*   (at your option) any later version.
*
*   Gymapp is distributed in the hope that it will be useful,
*   but WITHOUT ANY WARRANTY; without even the implied warranty of
*   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
*   GNU General Public License for more details.
*
*   You should have received a copy of the GNU General Public License
*  along with Gymapp.  If not, see <http://www.gnu.org/licenses/>.		
*/
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="8dp"
        android:text="@string/textview_musclegroup" />

    <Spinner
        android:id="@+id/spinnermusclegroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="8dp"
        android:text="@string/textview_muscle" />

    <Spinner
        android:id="@+id/spinnermuscle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    
	<!-- Has a Listview so it is able to scroll in the layout -->
    <ListView
        android:id="@+id/mainListView"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <!-- Get a view in the bottom of the layout, in this place we have buttons -->
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:layout_weight="0"
        android:gravity="center_horizontal" >

        <Button
            android:id="@+id/button_EditWorkout_Save"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:onClick="saveToDatabase"
            android:text="@string/button_save" />

        <Button
            android:id="@+id/button_Workout_Cancel"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:onClick="cancelEditWorkoutDialog"
            android:text="@string/cancel" />
    </LinearLayout>

</LinearLayout>